fixed issue where image height was covering all text under services-detail fixed in-out animation from side menu

--- a/src/app/components/service-detail/service-detail.component.scss
+++ b/src/app/components/service-detail/service-detail.component.scss
@@ -8,13 +8,14 @@
   background-size: cover;
   background-position: center;
   position: relative;
+  min-height: 100vh;
 
   .bg-img {
     z-index: -1!important;
     position: absolute;
     top: 0;
-    min-height: 100vh;
     width: 100%!important;
+    height: 100%;
 
     img {
       height: 100%;
@@ -27,7 +28,7 @@
   }
 
   .container {
-    min-height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     z-index: 10!important;
